--- a/09-DOM/09-amazon-EnterKey.html
+++ b/09-DOM/09-amazon-EnterKey.html
@@ -13,7 +13,7 @@
     <p id="js-para"></p>
 
     <script>
-        console.log(5+'25'+'20' - 5 +'10');
+        console.log('20' - 5 );
         function enterEvent(event){
             console.log(event);
             console.log(event.key);
