--- a/09-DOM/09-windowObject.html
+++ b/09-DOM/09-windowObject.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+
+    <script>
+        window.console.log();
+        window.document();
+    </script>
     
 </body>
 </html>
